--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-minimal
-title: Welcome to Jessica Loo's homepage!
+title: Jessica Loo
+description: PhD Student, Duke University
