--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Jessica Loo
-description: PhD Student, Duke University
+description: Data Scientist, Verily Life Sciences
