--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Jessica Loo
-description: Data Scientist, Verily Life Sciences
+description: Principal Data Scientist, Novartis
